--- a/index-new/index-new.html
+++ b/index-new/index-new.html
@@ -19,7 +19,7 @@
             <li><a href="#">Learn</a></li>
             <li><a href="#">Buisness</a></li>
             <li><a href="#">Picing</a></li>
-            <li><a href="../images.html">images</a></li>
+            <li><a href="../images/images.html">images</a></li>
             <li><a href="#">Dowland</a></li>
             </ul> 
         </nav>
